--- a/testindex.html
+++ b/testindex.html
@@ -3,7 +3,9 @@
 <head>
 <meta charset="UTF-8" />
 <title>GRIT CITY BJJ | Tacoma, WA</title>
-<meta name="viewport" content="width=device-width, initial-scale=1" />
+
+<!-- MOBILE ZOOM DISABLED -->
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
 
 <style>
 /* --------------------------------------------------------------
@@ -26,7 +28,7 @@ h2 {
   font-size: 2rem;
   font-weight: 800;
   margin-bottom: 22px;
-  color:#ffffff !important; /* FIXED */
+  color:#ffffff !important;
 }
 
 /* --------------------------------------------------------------
@@ -36,22 +38,23 @@ h2 {
   width:100%;
   height:auto;
   display:block;
-  margin:0 0 25px 0; /* bottom space only */
+  margin:0 0 25px 0;
   border-radius:14px;
   box-shadow:0 5px 24px rgba(0,0,0,0.55);
 }
+
 .banner-img.header {
   margin:0 !important;
-  padding:0;
+  padding:0 !important;
   display:block;
-  margin-bottom:0 !important; /* FIXED */
+  line-height:0 !important;
 }
 
 /* --------------------------------------------------------------
    HERO — team.webp
 -------------------------------------------------------------- */
 .hero {
-  position:relative; /* FIXED */
+  position:relative;
   width: 100%;
   height: 45vh;
   min-height: 360px;
@@ -336,6 +339,24 @@ footer img {
   padding:8px;
   border-radius:12px;
 }
+
+/* --------------------------------------------------------------
+   FINAL GAP-KILL PATCH (THE HAMMER)
+-------------------------------------------------------------- */
+.banner-img.header {
+  margin:0 !important;
+  padding:0 !important;
+  display:block !important;
+  line-height:0 !important;
+}
+
+img.banner-img.header {
+  vertical-align: top !important;
+}
+
+.hero {
+  margin-top:-45px !important;
+}
 </style>
 </head>
 <body>
@@ -343,11 +364,9 @@ footer img {
 <!-- header.webp -->
 <img src="header.webp" class="banner-img header" />
 
-<!-- HERO (team.webp) -->
+<!-- HERO -->
 <div class="hero">
   <div class="hero-content">
-
-    <!-- Removed GRIT CITY BJJ -->
     <div class="hero-sub">BJJ COACH International Association in Tacoma, WA</div>
 
     <div class="hero-btns">
@@ -617,7 +636,7 @@ function toggleAcc(btn){
 }
 </script>
 
-<!-- FOOTER (EACH IMAGE ON OWN LINE) -->
+<!-- FOOTER -->
 <footer>
 
 <div style="text-align:center;margin-bottom:20px;">
