--- a/testindex.html
+++ b/testindex.html
@@ -3,9 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <title>GRIT CITY BJJ | Tacoma, WA</title>
-
-<!-- MOBILE ZOOM DISABLED -->
-<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"/>
 
 <style>
 /* --------------------------------------------------------------
@@ -38,23 +36,22 @@ h2 {
   width:100%;
   height:auto;
   display:block;
-  margin:0 0 25px 0;
+  margin:25px 0;
   border-radius:14px;
   box-shadow:0 5px 24px rgba(0,0,0,0.55);
 }
 
 .banner-img.header {
-  margin:0 !important;
-  padding:0 !important;
-  display:block;
-  line-height:0 !important;
+  margin: 0 !important;
+  padding: 0 !important;
+  line-height: 0 !important;
+  vertical-align: top !important;
 }
 
 /* --------------------------------------------------------------
    HERO — team.webp
 -------------------------------------------------------------- */
 .hero {
-  position:relative;
   width: 100%;
   height: 45vh;
   min-height: 360px;
@@ -65,22 +62,23 @@ h2 {
   justify-content: center;
   align-items: flex-end;
   padding-bottom: 25px;
-  margin: 0;
+  margin-top: -60px !important; /* << KILLS THE GAP */
 }
+
 .hero::after {
   content:"";
   position:absolute;
-  inset:0;
+  top:0;left:0;right:0;bottom:0;
   background:linear-gradient(to bottom, rgba(0,0,0,0.05), rgba(0,0,0,0.75));
+  pointer-events:none;
+  z-index:1;
 }
+
 .hero-content {
   position:relative;
   text-align:center;
-  z-index:10;
-  margin-bottom: 6px;
+  z-index:2;
 }
-
-/* HERO TITLE REMOVED */
 
 .hero-sub {
   font-size: 1rem;
@@ -93,6 +91,7 @@ h2 {
   justify-content:center;
   gap:12px;
 }
+
 .btn-blue {
   background:#3B82F6;
   padding:12px 22px;
@@ -259,7 +258,7 @@ section .program-box {
 }
 
 /* --------------------------------------------------------------
-   ACCORDIONS
+   BLUE ACCORDIONS
 -------------------------------------------------------------- */
 .accordion-btn {
   width:100%;
@@ -273,6 +272,10 @@ section .program-box {
   text-align:left;
   letter-spacing:1px;
   box-shadow:0 0 10px rgba(59,130,246,0.4);
+}
+.accordion-btn:hover {
+  background:#1E293B;
+  box-shadow:0 0 16px rgba(59,130,246,0.7);
 }
 .accordion-content {
   display:none;
@@ -304,10 +307,27 @@ form button {
   font-weight:800;
   margin-top:8px;
 }
+form button:hover {
+  background:#60A5FA;
+}
 
 /* --------------------------------------------------------------
-   POPUP
+   FOOTER
 -------------------------------------------------------------- */
+footer {
+  padding:30px 18px;
+  background:#080808;
+  text-align:center;
+  margin-top:30px;
+}
+footer img {
+  background:#111;
+  border-radius:12px;
+  padding:8px;
+  margin-bottom:20px;
+}
+
+/* POPUP */
 #imgPopup {
   display:none;
   position:fixed;
@@ -322,53 +342,17 @@ form button {
   max-height:90%;
   border-radius:12px;
 }
-
-/* --------------------------------------------------------------
-   FOOTER — EACH IMAGE ON ITS OWN LINE
--------------------------------------------------------------- */
-footer {
-  padding:30px 18px;
-  background:#080808;
-  text-align:center;
-  margin-top:30px;
-}
-footer img {
-  display:block;
-  margin:0 auto 22px auto;
-  background:#111;
-  padding:8px;
-  border-radius:12px;
-}
-
-/* --------------------------------------------------------------
-   FINAL GAP-KILL PATCH (THE HAMMER)
--------------------------------------------------------------- */
-.banner-img.header {
-  margin:0 !important;
-  padding:0 !important;
-  display:block !important;
-  line-height:0 !important;
-}
-
-img.banner-img.header {
-  vertical-align: top !important;
-}
-
-.hero {
-  margin-top:-45px !important;
-}
 </style>
 </head>
 <body>
 
-<!-- header.webp -->
+<!-- HEADER -->
 <img src="header.webp" class="banner-img header" />
 
 <!-- HERO -->
 <div class="hero">
   <div class="hero-content">
     <div class="hero-sub">BJJ COACH International Association in Tacoma, WA</div>
-
     <div class="hero-btns">
       <a href="#try" class="btn-blue">Try a Free Class</a>
       <a href="#schedule" class="btn-blue-outline">View Schedule</a>
@@ -511,12 +495,12 @@ img.banner-img.header {
 <ul>
 <li>01. Always be respectful.</li>
 <li>02. Always address Professors and Coaches accordingly.</li>
-<li>03. Uphold the integrity of our principles on and off the mats.</li>
-<li>04. If you are late, wait outside until permitted to join.</li>
-<li>05. Bow on and off the mats.</li>
-<li>06. No leaving mat area without permission.</li>
+<li>03. Uphold integrity on and off the mats.</li>
+<li>04. If late, wait for permission.</li>
+<li>05. Bow on and off.</li>
+<li>06. No leaving mat without permission.</li>
 <li>07. Maintain posture during instruction.</li>
-<li>08. Talking minimal and relevant.</li>
+<li>08. Talking minimal.</li>
 <li>09. No foul language.</li>
 <li>10. Be humble.</li>
 <li>11. Believe & Achieve.</li>
@@ -526,30 +510,30 @@ img.banner-img.header {
 <ul>
 <li>No shoes on mats.</li>
 <li>Bottled drinks only.</li>
-<li>No electronics in training area.</li>
+<li>No electronics.</li>
 <li>Change only in designated areas.</li>
-<li>Gear stored properly.</li>
+<li>Keep gear stored properly.</li>
 </ul>
 
 <h3>Hygiene</h3>
 <ul>
 <li>Maintain hygiene.</li>
-<li>Uniform must be clean.</li>
+<li>Clean uniform.</li>
 <li>Trim nails.</li>
-<li>Remove all jewelry.</li>
+<li>Remove jewelry.</li>
 </ul>
 
 <h3>Uniform</h3>
 <ul>
 <li>Academy patches required.</li>
-<li>No other school patches allowed.</li>
+<li>No other schools’ patches allowed.</li>
 </ul>
 
 <h3>Spectators</h3>
 <ul>
-<li>Remain in designated seating.</li>
+<li>Stay in seating area.</li>
 <li>Devices silent.</li>
-<li>No sideline coaching.</li>
+<li>No coaching from sidelines.</li>
 </ul>
 
 </div>
@@ -561,47 +545,33 @@ img.banner-img.header {
 <button class="accordion-btn" onclick="toggleAcc(this)">Expand FAQ's</button>
 <div class="accordion-content">
 
-<p><strong>1. What can BJJ and your school do for me?</strong><br>
-BJJ helps fitness, confidence, discipline, stress relief, and community.</p>
+<p><strong>1. What can BJJ do for me?</strong><br>BJJ improves fitness, confidence, discipline, stress relief, and community.</p>
 
-<p><strong>2. Do I need to be in shape?</strong><br>
-We welcome all fitness levels.</p>
+<p><strong>2. Do I need to be in shape?</strong><br>We welcome all fitness levels.</p>
 
-<p><strong>3. Am I too old?</strong><br>
-No — all ages train.</p>
+<p><strong>3. Am I too old?</strong><br>No — all ages train.</p>
 
-<p><strong>4. Will I be expected to compete?</strong><br>
-Competition is optional.</p>
+<p><strong>4. Expected to compete?</strong><br>No — optional.</p>
 
-<p><strong>5. Prior experience needed?</strong><br>
-No.</p>
+<p><strong>5. Experience required?</strong><br>No.</p>
 
-<p><strong>6. Beginner classes?</strong><br>
-Yes — structured basics.</p>
+<p><strong>6. Beginner classes?</strong><br>Yes — structured basics.</p>
 
-<p><strong>7. Striking?</strong><br>
-Yes — MMA, Muay Thai, Boxing.</p>
+<p><strong>7. Striking?</strong><br>Yes — MMA, Muay Thai, Boxing.</p>
 
-<p><strong>8. Weight loss?</strong><br>
-Very effective.</p>
+<p><strong>8. Weight loss?</strong><br>Highly effective.</p>
 
-<p><strong>9. Class structure?</strong><br>
-Warmup → Technique → Rolling.</p>
+<p><strong>9. Class structure?</strong><br>Warmup → Technique → Rolling.</p>
 
-<p><strong>10. Family discounts?</strong><br>
-Yes.</p>
+<p><strong>10. Family discounts?</strong><br>Yes.</p>
 
-<p><strong>11. Membership cost?</strong><br>
-Varies based on goals.</p>
+<p><strong>11. Membership cost?</strong><br>Depends on goals.</p>
 
-<p><strong>12. Kids classes?</strong><br>
-Age 5+.</p>
+<p><strong>12. Kids classes?</strong><br>Age 5+.</p>
 
-<p><strong>13. Time to Black Belt?</strong><br>
-Depends on dedication.</p>
+<p><strong>13. Time to Black Belt?</strong><br>Varies per individual.</p>
 
-<p><strong>14. How to start?</strong><br>
-Call <a href="tel:2532546538" style="color:#3B82F6;">253-254-6538</a>.</p>
+<p><strong>14. How to start?</strong><br>Call <a href="tel:2532546538" style="color:#3B82F6;">253-254-6538</a>.</p>
 
 </div>
 </section>
@@ -639,15 +609,15 @@ function toggleAcc(btn){
 <!-- FOOTER -->
 <footer>
 
-<div style="text-align:center;margin-bottom:20px;">
+<div>
   <img src="military_discounts.gif" style="width:140px;">
 </div>
 
-<div style="text-align:center;margin-bottom:20px;">
+<div>
   <img src="no_bullies.jpg" style="width:140px;">
 </div>
 
-<div style="text-align:center;margin-bottom:20px;">
+<div>
   <img src="sanitized_facility.jpg" style="width:160px;">
 </div>
 
