Add spacing div above header in testindex.html

--- a/testindex.html
+++ b/testindex.html
@@ -338,8 +338,9 @@ footer img {
 </style>
 </head>
 <body>
-
+   
 <!-- HEADER -->
+   <div style="height:20px;"></div>
 <img src="header.webp" class="banner-img header" />
 
 <!-- HERO -->
