Refactor footer layout with flexbox for images

--- a/testindex.html
+++ b/testindex.html
@@ -629,22 +629,26 @@ function toggleAcc(btn){
 }
 </script>
 
-<!-- FOOTER -->
 <footer>
 
-<!-- TOP ROW — military + no bullies -->
-<div class="footer-two">
-  <img src="military_discounts.gif">
-  <img src="no_bullies.jpg">
+<!-- ROW 1 — military on its own row -->
+<div style="display:flex;justify-content:center;margin-bottom:18px;">
+  <img src="military_discounts.gif" style="width:140px;border-radius:12px;background:#111;padding:8px;">
 </div>
 
-<!-- SECOND ROW — sanitized -->
-<div class="footer-one">
-  <img src="sanitized_facility.jpg">
+<!-- ROW 2 — no bullies on its own row -->
+<div style="display:flex;justify-content:center;margin-bottom:18px;">
+  <img src="no_bullies.jpg" style="width:140px;border-radius:12px;background:#111;padding:8px;">
+</div>
+
+<!-- ROW 3 — sanitized on its own row -->
+<div style="display:flex;justify-content:center;margin-bottom:18px;">
+  <img src="sanitized_facility.jpg" style="width:140px;border-radius:12px;background:#111;padding:8px;">
 </div>
 
 <p>&copy; 2025 GRIT CITY BJJ — All Rights Reserved</p>
 </footer>
+
 
 </body>
 </html>
