--- a/testindex.html
+++ b/testindex.html
@@ -28,42 +28,36 @@ h2 {
   font-size: 2rem;
   font-weight: 800;
   margin-bottom: 22px;
-  color: #ffffff !important;   /* PROGRAMS IS NOW WHITE */
+  color: #ffffff !important;
 }
 
 /* --------------------------------------------------------------
-   IMAGE BANNERS
+   HEADER (FIXED)
 -------------------------------------------------------------- */
-.banner-img {
-  width:100%;
-  height:auto;
-  display:block;
-  margin:25px 0;
-  border-radius:14px;
-  box-shadow:0 5px 24px rgba(0,0,0,0.55);
-}
-
-/* HEADER OFFSET (YOU CHOSE 20PX) */
 .banner-img.header {
   margin-top:20px !important;
   margin-bottom:0 !important;
+  width:100% !important;
+  height:auto !important;
+  display:block !important;
+  object-fit:contain !important;
   padding:0 !important;
 }
 
 /* --------------------------------------------------------------
-   HERO — team.webp (UNCHANGED)
+   HERO — team.webp (NO MORE OVERLAP)
 -------------------------------------------------------------- */
 .hero {
   width: 100%;
   height: 45vh;
-  min-height: 360px;
-  background: #000 url('team.webp') center center no-repeat;
+  min-height: 320px;
+  background: #000 url('team.webp') top center no-repeat;
   background-size: contain !important;
   display: flex;
   justify-content: center;
   align-items: flex-end;
   padding-bottom: 25px;
-  margin-top: -60px;
+  margin-top: 0 !important;     /* FIXED */
   position: relative;
 }
 .hero::after {
@@ -137,7 +131,7 @@ h2 {
 }
 
 /* --------------------------------------------------------------
-   PROGRAMS (FIXED CORRECTLY)
+   PROGRAMS (FIXED COLORS)
 -------------------------------------------------------------- */
 .program-grid {
   display:grid;
@@ -145,7 +139,6 @@ h2 {
   gap:16px;
 }
 
-/* UNIFORM COLOR + WHITE TEXT */
 .program-box {
   background:#1E293B !important;
   color:#ffffff !important;
@@ -300,7 +293,7 @@ form button {
 }
 
 /* --------------------------------------------------------------
-   FOOTER
+   FOOTER — ONE IMAGE PER ROW
 -------------------------------------------------------------- */
 footer {
   padding:30px 18px;
@@ -308,24 +301,13 @@ footer {
   text-align:center;
   margin-top:30px;
 }
-.footer-two {
+
+.footer-row {
   display:flex;
   justify-content:center;
-  gap:22px;
-  flex-wrap:wrap;
-  margin-bottom:16px;
+  margin-bottom:20px;
 }
-.footer-two img {
-  width:120px;
-  border-radius:12px;
-  background:#111;
-  padding:8px;
-}
-.footer-one {
-  display:flex;
-  justify-content:center;
-}
-.footer-one img {
+.footer-row img {
   width:140px;
   border-radius:12px;
   background:#111;
@@ -353,10 +335,10 @@ footer {
 </head>
 <body>
 
-<!-- header.webp -->
+<!-- HEADER -->
 <img src="header.webp" class="banner-img header" />
 
-<!-- HERO — team.webp -->
+<!-- HERO -->
 <div class="hero">
   <div class="hero-content">
     <div class="hero-sub">BJJ COACH International Association in Tacoma, WA</div>
@@ -368,7 +350,7 @@ footer {
   </div>
 </div>
 
-<!-- NAVIGATION -->
+<!-- NAV -->
 <div class="navbar">
   <div class="nav-inner">
     <a href="#conduct">Conduct</a>
@@ -413,10 +395,10 @@ footer {
 </div>
 </section>
 
-<!-- tacoma.webp -->
+<!-- tacoma -->
 <img src="tacoma.webp" class="banner-img" />
 
-<!-- face-off.webp -->
+<!-- face-off -->
 <img src="face-off.webp" class="banner-img" />
 
 <!-- GALLERY -->
@@ -609,7 +591,6 @@ Call <a href="tel:2532546538" style="color:#3B82F6;">253-254-6538</a>.</p>
   <button>Submit</button>
 </form>
 
-<!-- INTRODUCTORY IMAGE -->
 <img src="introductory_class.jpg" style="width:100%;margin-top:20px;border-radius:14px;display:block;">
 </section>
 
@@ -629,26 +610,23 @@ function toggleAcc(btn){
 }
 </script>
 
+<!-- FOOTER — 1 IMAGE PER ROW -->
 <footer>
 
-<!-- ROW 1 — military on its own row -->
-<div style="display:flex;justify-content:center;margin-bottom:18px;">
-  <img src="military_discounts.gif" style="width:140px;border-radius:12px;background:#111;padding:8px;">
+<div class="footer-row">
+  <img src="military_discounts.gif">
 </div>
 
-<!-- ROW 2 — no bullies on its own row -->
-<div style="display:flex;justify-content:center;margin-bottom:18px;">
-  <img src="no_bullies.jpg" style="width:140px;border-radius:12px;background:#111;padding:8px;">
+<div class="footer-row">
+  <img src="no_bullies.jpg">
 </div>
 
-<!-- ROW 3 — sanitized on its own row -->
-<div style="display:flex;justify-content:center;margin-bottom:18px;">
-  <img src="sanitized_facility.jpg" style="width:140px;border-radius:12px;background:#111;padding:8px;">
+<div class="footer-row">
+  <img src="sanitized_facility.jpg">
 </div>
 
 <p>&copy; 2025 GRIT CITY BJJ — All Rights Reserved</p>
 </footer>
-
 
 </body>
 </html>
