--- a/testindex.html
+++ b/testindex.html
@@ -4,13 +4,11 @@
 <meta charset="UTF-8" />
 <title>GRIT CITY BJJ | Tacoma, WA</title>
 
-<!-- DISABLE MOBILE ZOOM -->
+<!-- DISABLE ZOOM -->
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
 
 <style>
-/* --------------------------------------------------------------
-   BASE
--------------------------------------------------------------- */
+/* BASE ------------------------------------------------------------ */
 body {
   margin: 0;
   background: #0A0A0A;
@@ -18,91 +16,36 @@ body {
   font-family: 'Segoe UI', Arial, sans-serif;
   overflow-x: hidden;
 }
+
 section {
   padding: 45px 18px;
   max-width: 1100px;
   margin: 0 auto;
 }
+
 h2 {
   text-align: center;
   font-size: 2rem;
   font-weight: 800;
   margin-bottom: 22px;
-  color: #ffffff !important;
+  color: #ffffff;
 }
 
-/* --------------------------------------------------------------
-   HEADER (FIXED)
--------------------------------------------------------------- */
-.banner-img.header {
-  margin-top:20px !important;
-  margin-bottom:0 !important;
-  width:100% !important;
-  height:auto !important;
-  display:block !important;
-  object-fit:contain !important;
-  padding:0 !important;
+/* HEADER (20px spacing ABOVE header only) ------------------------- */
+.header-wrap {
+  margin-top: 20px;
 }
 
-/* --------------------------------------------------------------
-   HERO — team.webp (NO MORE OVERLAP)
--------------------------------------------------------------- */
-.hero {
-  width: 100%;
-  height: 45vh;
-  min-height: 320px;
-  background: #000 url('team.webp') top center no-repeat;
-  background-size: contain !important;
-  display: flex;
-  justify-content: center;
-  align-items: flex-end;
-  padding-bottom: 25px;
-  margin-top: 0 !important;     /* FIXED */
-  position: relative;
-}
-.hero::after {
-  content:"";
-  position:absolute;
-  inset:0;
-  background:linear-gradient(to bottom, rgba(0,0,0,0.05), rgba(0,0,0,0.75));
-}
-.hero-content {
-  position:relative;
-  text-align:center;
-  z-index:10;
-  margin-bottom: 6px;
-}
-.hero-sub {
-  font-size: 1rem;
-  opacity:.9;
-  margin-bottom: 18px;
-}
-.hero-btns {
-  display:flex;
-  justify-content:center;
-  gap:12px;
-}
-.btn-blue {
-  background:#3B82F6;
-  padding:12px 22px;
-  border-radius:10px;
-  color:#fff;
-  font-weight:800;
-  text-decoration:none;
-}
-.btn-blue-outline {
-  background:transparent;
-  padding:12px 22px;
-  border-radius:10px;
-  color:#3B82F6;
-  border:2px solid #3B82F6;
-  font-weight:800;
-  text-decoration:none;
+.banner-img {
+  width:100%;
+  height:auto;
+  display:block;
+  border-radius:14px;
+  margin:0;
+  box-shadow:0 5px 24px rgba(0,0,0,0.55);
 }
 
-/* --------------------------------------------------------------
-   NAV BAR
--------------------------------------------------------------- */
+/* NAV BAR --------------------------------------------------------- */
 .navbar {
   background: rgba(10,10,10,0.75);
   backdrop-filter: blur(6px);
@@ -130,9 +73,9 @@ h2 {
   border-color:#3B82F6;
 }
 
-/* --------------------------------------------------------------
-   PROGRAMS (FIXED COLORS)
--------------------------------------------------------------- */
+/* PROGRAMS -------------------------------------------------------- */
+#programs-title { color:white; }
+
 .program-grid {
   display:grid;
   grid-template-columns:repeat(2, 1fr);
@@ -140,18 +83,16 @@ h2 {
 }
 
 .program-box {
-  background:#1E293B !important;
-  color:#ffffff !important;
+  background:#1E293B;
   padding:22px;
   border-radius:14px;
   text-align:center;
   font-weight:800;
-  border:1px solid #334155;
+  border:2px solid #3B82F6;
+  color:white;
 }
 
-/* --------------------------------------------------------------
-   SCHEDULE
--------------------------------------------------------------- */
+/* SCHEDULE -------------------------------------------------------- */
 .schedule-card {
   background:#111827;
   padding:16px;
@@ -165,9 +106,7 @@ h2 {
   border-radius:12px;
 }
 
-/* --------------------------------------------------------------
-   LOCATION
--------------------------------------------------------------- */
+/* LOCATION -------------------------------------------------------- */
 .location-card {
   background:#111827;
   padding:22px;
@@ -190,9 +129,7 @@ h2 {
   border:1px solid #1F2937;
 }
 
-/* --------------------------------------------------------------
-   GALLERY
--------------------------------------------------------------- */
+/* GALLERY --------------------------------------------------------- */
 .gallery-scroll {
   display:flex;
   overflow-x:auto;
@@ -207,9 +144,7 @@ h2 {
   cursor:pointer;
 }
 
-/* --------------------------------------------------------------
-   LINEAGE
--------------------------------------------------------------- */
+/* LINEAGE --------------------------------------------------------- */
 .lineage-grid {
   display:grid;
   grid-template-columns:repeat(auto-fit, minmax(130px,1fr));
@@ -223,9 +158,7 @@ h2 {
   object-fit:cover;
 }
 
-/* --------------------------------------------------------------
-   INSTRUCTORS
--------------------------------------------------------------- */
+/* INSTRUCTORS ----------------------------------------------------- */
 .instructor-grid {
   display:grid;
   grid-template-columns:repeat(auto-fit,minmax(200px,1fr));
@@ -245,9 +178,7 @@ h2 {
   border-radius:12px;
 }
 
-/* --------------------------------------------------------------
-   ACCORDIONS
--------------------------------------------------------------- */
+/* ACCORDIONS ------------------------------------------------------ */
 .accordion-btn {
   width:100%;
   padding:14px 18px;
@@ -261,6 +192,10 @@ h2 {
   letter-spacing:1px;
   box-shadow:0 0 10px rgba(59,130,246,0.4);
 }
+.accordion-btn:hover {
+  background:#1E293B;
+  box-shadow:0 0 16px rgba(59,130,246,0.7);
+}
 .accordion-content {
   display:none;
   margin-top:12px;
@@ -270,9 +205,7 @@ h2 {
   border:1px solid #1F2937;
 }
 
-/* --------------------------------------------------------------
-   FORM
--------------------------------------------------------------- */
+/* FORM ------------------------------------------------------------ */
 form input, form textarea {
   width:100%;
   background:#1F2937;
@@ -292,9 +225,7 @@ form button {
   margin-top:8px;
 }
 
-/* --------------------------------------------------------------
-   FOOTER — ONE IMAGE PER ROW
--------------------------------------------------------------- */
+/* FOOTER ---------------------------------------------------------- */
 footer {
   padding:30px 18px;
   background:#080808;
@@ -302,55 +233,28 @@ footer {
   margin-top:30px;
 }
 
-.footer-row {
-  display:flex;
-  justify-content:center;
-  margin-bottom:20px;
+/* Bottom images: EACH ON OWN ROW */
+.footer-img-row {
+  text-align:center;
+  margin-bottom:22px;
 }
-.footer-row img {
+.footer-img-row img {
   width:140px;
   border-radius:12px;
   background:#111;
   padding:8px;
 }
-
-/* --------------------------------------------------------------
-   POPUP
--------------------------------------------------------------- */
-#imgPopup {
-  display:none;
-  position:fixed;
-  inset:0;
-  background:rgba(0,0,0,0.85);
-  justify-content:center;
-  align-items:center;
-  z-index:99999;
-}
-#imgPopup img {
-  max-width:90%;
-  max-height:90%;
-  border-radius:12px;
-}
 </style>
 </head>
+
 <body>
 
-<!-- HEADER -->
-<img src="header.webp" class="banner-img header" />
-
-<!-- HERO -->
-<div class="hero">
-  <div class="hero-content">
-    <div class="hero-sub">BJJ COACH International Association in Tacoma, WA</div>
-
-    <div class="hero-btns">
-      <a href="#try" class="btn-blue">Try a Free Class</a>
-      <a href="#schedule" class="btn-blue-outline">View Schedule</a>
-    </div>
-  </div>
+<!-- SPACING ABOVE HEADER + HEADER IMAGE -->
+<div class="header-wrap">
+  <img src="header.webp" class="banner-img">
 </div>
 
-<!-- NAV -->
+<!-- NAVIGATION -->
 <div class="navbar">
   <div class="nav-inner">
     <a href="#conduct">Conduct</a>
@@ -362,7 +266,7 @@ footer {
 
 <!-- PROGRAMS -->
 <section>
-<h2>Programs</h2>
+<h2 id="programs-title">Programs</h2>
 <div class="program-grid">
   <div class="program-box">Adult BJJ</div>
   <div class="program-box">Kids BJJ</div>
@@ -395,11 +299,11 @@ footer {
 </div>
 </section>
 
-<!-- tacoma -->
-<img src="tacoma.webp" class="banner-img" />
+<!-- tacoma.webp -->
+<img src="tacoma.webp" class="banner-img">
 
-<!-- face-off -->
-<img src="face-off.webp" class="banner-img" />
+<!-- face-off.webp -->
+<img src="face-off.webp" class="banner-img">
 
 <!-- GALLERY -->
 <section>
@@ -448,34 +352,16 @@ footer {
 <section id="instructors">
 <h2>Instructors</h2>
 <div class="instructor-grid">
-  <div class="instructor-card">
-    <img src="mcm_5th_degree.jpg" onclick="pop(this)">
-    <h3>Professor Marcello C Monteiro</h3>
-  </div>
-  <div class="instructor-card">
-    <img src="michael_proctor.JPG" onclick="pop(this)">
-    <h3>Professor Michael Proctor</h3>
-  </div>
-  <div class="instructor-card">
-    <img src="david_gines.JPG" onclick="pop(this)">
-    <h3>Professor David Gines</h3>
-  </div>
-  <div class="instructor-card">
-    <img src="marcus_finkel.png" onclick="pop(this)">
-    <h3>Coach Marcus Finkel</h3>
-  </div>
-  <div class="instructor-card">
-    <img src="donnie_mcmasters.png" onclick="pop(this)">
-    <h3>Coach Donnie McMasters</h3>
-  </div>
-  <div class="instructor-card">
-    <img src="chris_kuykendall.png" onclick="pop(this)">
-    <h3>Coach Chris Kuykendall</h3>
-  </div>
+  <div class="instructor-card"><img src="mcm_5th_degree.jpg" onclick="pop(this)"><h3>Professor Marcello C Monteiro</h3></div>
+  <div class="instructor-card"><img src="michael_proctor.JPG" onclick="pop(this)"><h3>Professor Michael Proctor</h3></div>
+  <div class="instructor-card"><img src="david_gines.JPG" onclick="pop(this)"><h3>Professor David Gines</h3></div>
+  <div class="instructor-card"><img src="marcus_finkel.png" onclick="pop(this)"><h3>Coach Marcus Finkel</h3></div>
+  <div class="instructor-card"><img src="donnie_mcmasters.png" onclick="pop(this)"><h3>Coach Donnie McMasters</h3></div>
+  <div class="instructor-card"><img src="chris_kuykendall.png" onclick="pop(this)"><h3>Coach Chris Kuykendall</h3></div>
 </div>
 </section>
 
-<!-- CODE OF CONDUCT -->
+<!-- CONDUCT -->
 <section id="conduct">
 <h2>Code of Conduct</h2>
 <button class="accordion-btn" onclick="toggleAcc(this)">Expand Code of Conduct</button>
@@ -484,9 +370,9 @@ footer {
 <h3>Code of Conduct</h3>
 <ul>
 <li>01. Always be respectful.</li>
-<li>02. Always address Professors and Coaches accordingly.</li>
-<li>03. Uphold the integrity of our principles on and off the mats.</li>
-<li>04. If you are late, wait outside until permitted to join.</li>
+<li>02. Always address Professors and Coaches properly.</li>
+<li>03. Uphold our principles on and off the mats.</li>
+<li>04. If late, wait outside until permitted.</li>
 <li>05. Bow on and off the mats.</li>
 <li>06. No leaving mat area without permission.</li>
 <li>07. Maintain posture during instruction.</li>
@@ -502,15 +388,15 @@ footer {
 <li>Bottled drinks only.</li>
 <li>No electronics in training area.</li>
 <li>Change only in designated areas.</li>
-<li>Gear stored in proper areas.</li>
+<li>Gear stored properly.</li>
 </ul>
 
 <h3>Hygiene</h3>
 <ul>
 <li>Maintain hygiene.</li>
-<li>Uniform must be clean.</li>
+<li>Uniform clean.</li>
 <li>Trim nails.</li>
-<li>Remove all jewelry.</li>
+<li>No jewelry.</li>
 </ul>
 
 <h3>Uniform</h3>
@@ -523,7 +409,7 @@ footer {
 <ul>
 <li>Remain in designated seating.</li>
 <li>Devices silent.</li>
-<li>No coaching from sidelines.</li>
+<li>No coaching students.</li>
 </ul>
 
 </div>
@@ -535,47 +421,33 @@ footer {
 <button class="accordion-btn" onclick="toggleAcc(this)">Expand FAQ's</button>
 <div class="accordion-content">
 
-<p><strong>1. What can BJJ and your school do for me?</strong><br>
-BJJ helps fitness, confidence, discipline, stress relief, and community.</p>
+<p><strong>1. What can BJJ and your school do for me?</strong><br>BJJ helps fitness, confidence, discipline, stress relief, and community.</p>
 
-<p><strong>2. Do I need to be in shape?</strong><br>
-We welcome all fitness levels.</p>
+<p><strong>2. Do I need to be in shape?</strong><br>We welcome all fitness levels.</p>
 
-<p><strong>3. Am I too old?</strong><br>
-No — all ages train.</p>
+<p><strong>3. Am I too old?</strong><br>No — all ages train.</p>
 
-<p><strong>4. Will I be expected to compete?</strong><br>
-Competition is optional.</p>
+<p><strong>4. Will I be expected to compete?</strong><br>Competition is optional.</p>
 
-<p><strong>5. Prior experience needed?</strong><br>
-No.</p>
+<p><strong>5. Prior experience needed?</strong><br>No.</p>
 
-<p><strong>6. Beginner classes?</strong><br>
-Yes — structured basics.</p>
+<p><strong>6. Beginner classes?</strong><br>Yes — structured basics.</p>
 
-<p><strong>7. Striking?</strong><br>
-Yes — MMA, Muay Thai, Boxing.</p>
+<p><strong>7. Striking?</strong><br>Yes — MMA, Muay Thai, Boxing.</p>
 
-<p><strong>8. Weight loss?</strong><br>
-Very effective.</p>
+<p><strong>8. Weight loss?</strong><br>Very effective.</p>
 
-<p><strong>9. Class structure?</strong><br>
-Warmup → Technique → Rolling.</p>
+<p><strong>9. Class structure?</strong><br>Warmup → Technique → Rolling.</p>
 
-<p><strong>10. Family discounts?</strong><br>
-Yes.</p>
+<p><strong>10. Family discounts?</strong><br>Yes.</p>
 
-<p><strong>11. Membership cost?</strong><br>
-Varies based on goals.</p>
+<p><strong>11. Membership cost?</strong><br>Varies based on goals.</p>
 
-<p><strong>12. Kids classes?</strong><br>
-Age 5+.</p>
+<p><strong>12. Kids classes?</strong><br>Age 5+.</p>
 
-<p><strong>13. Time to Black Belt?</strong><br>
-Depends on dedication.</p>
+<p><strong>13. Time to Black Belt?</strong><br>Depends on dedication.</p>
 
-<p><strong>14. How to start?</strong><br>
-Call <a href="tel:2532546538" style="color:#3B82F6;">253-254-6538</a>.</p>
+<p><strong>14. How to start?</strong><br>Call <a href="tel:2532546538" style="color:#3B82F6;">253-254-6538</a>.</p>
 
 </div>
 </section>
@@ -583,6 +455,7 @@ Call <a href="tel:2532546538" style="color:#3B82F6;">253-254-6538</a>.</p>
 <!-- TRY FREE CLASS -->
 <section id="try">
 <h2>Try a Free Class</h2>
+
 <form action="mailto:gritcitybjj@gmail.com" method="POST" enctype="text/plain">
   <input name="Name" placeholder="Name (required)" required>
   <input name="Email" placeholder="Email (required)" required>
@@ -591,12 +464,13 @@ Call <a href="tel:2532546538" style="color:#3B82F6;">253-254-6538</a>.</p>
   <button>Submit</button>
 </form>
 
+<!-- INTRO IMAGE -->
 <img src="introductory_class.jpg" style="width:100%;margin-top:20px;border-radius:14px;display:block;">
 </section>
 
 <!-- POPUP -->
-<div id="imgPopup" onclick="this.style.display='none'">
-  <img>
+<div id="imgPopup" onclick="this.style.display='none'" style="display:none;position:fixed;inset:0;background:rgba(0,0,0,0.85);justify-content:center;align-items:center;z-index:99999;">
+  <img style="max-width:90%;max-height:90%;border-radius:12px;">
 </div>
 
 <script>
@@ -610,20 +484,12 @@ function toggleAcc(btn){
 }
 </script>
 
-<!-- FOOTER — 1 IMAGE PER ROW -->
+<!-- FOOTER -->
 <footer>
 
-<div class="footer-row">
-  <img src="military_discounts.gif">
-</div>
-
-<div class="footer-row">
-  <img src="no_bullies.jpg">
-</div>
-
-<div class="footer-row">
-  <img src="sanitized_facility.jpg">
-</div>
+<div class="footer-img-row"><img src="military_discounts.gif"></div>
+<div class="footer-img-row"><img src="no_bullies.jpg"></div>
+<div class="footer-img-row"><img src="sanitized_facility.jpg"></div>
 
 <p>&copy; 2025 GRIT CITY BJJ — All Rights Reserved</p>
 </footer>
