--- a/index.html
+++ b/index.html
@@ -31,9 +31,10 @@ h2 {
   color: #ffffff;
 }
 
-/* HEADER (20px spacing ABOVE header only) ------------------------- */
+/* HEADER ---------------------------------------------------------- */
 .header-wrap {
   margin-top: 20px;
+  margin-bottom: 20px;
 }
 
 .banner-img {
@@ -71,6 +72,16 @@ h2 {
 }
 .nav-inner a:hover {
   border-color:#3B82F6;
+}
+
+/* LOGIN BUTTON PULSE --------------------------------------------- */
+@keyframes pulseButton {
+  0%   { transform: scale(1); }
+  50%  { transform: scale(1.06); }
+  100% { transform: scale(1); }
+}
+.pulse-login {
+  animation: pulseButton 1.8s infinite ease-in-out;
 }
 
 /* PROGRAMS -------------------------------------------------------- */
@@ -233,7 +244,7 @@ footer {
   margin-top:30px;
 }
 
-/* Bottom images: EACH ON OWN ROW */
+/* Bottom images on their own row */
 .footer-img-row {
   text-align:center;
   margin-bottom:22px;
@@ -249,7 +260,7 @@ footer {
 
 <body>
 
-<!-- SPACING ABOVE HEADER + HEADER IMAGE -->
+<!-- HEADER -->
 <div class="header-wrap">
   <img src="header.webp" class="banner-img">
 </div>
@@ -264,6 +275,21 @@ footer {
   </div>
 </div>
 
+<!-- STUDENT LOGIN BUTTON -->
+<div style="text-align:center; margin:18px 0;">
+  <a href="https://gritcitybjj.com/login"
+     class="pulse-login"
+     style="background:#3B82F6;
+            padding:12px 24px;
+            border-radius:10px;
+            color:white;
+            font-weight:800;
+            text-decoration:none;
+            display:inline-block;">
+     Student Login
+  </a>
+</div>
+
 <!-- PROGRAMS -->
 <section>
 <h2 id="programs-title">Programs</h2>
@@ -272,6 +298,8 @@ footer {
   <div class="program-box">Kids BJJ</div>
   <div class="program-box">Private Lessons</div>
   <div class="program-box">Competition Team</div>
+  <div class="program-box">Kickboxing</div>
+  <div class="program-box">MMA</div>
 </div>
 </section>
 
@@ -464,7 +492,6 @@ footer {
   <button>Submit</button>
 </form>
 
-<!-- INTRO IMAGE -->
 <img src="introductory_class.jpg" style="width:100%;margin-top:20px;border-radius:14px;display:block;">
 </section>
 
@@ -486,11 +513,9 @@ function toggleAcc(btn){
 
 <!-- FOOTER -->
 <footer>
-
 <div class="footer-img-row"><img src="military_discounts.gif"></div>
 <div class="footer-img-row"><img src="no_bullies.jpg"></div>
 <div class="footer-img-row"><img src="sanitized_facility.jpg"></div>
-
 <p>&copy; 2025 GRIT CITY BJJ — All Rights Reserved</p>
 </footer>
 
