Update student login button URL

--- a/testindex.html
+++ b/testindex.html
@@ -277,7 +277,7 @@ footer {
 
 <!-- STUDENT LOGIN BUTTON -->
 <div style="text-align:center; margin:18px 0;">
-  <a href="https://gritcitybjj.com/login"
+  <a href="https://bjjtacoma.kicksite.net/users/sign_in"
      class="pulse-login"
      style="background:#3B82F6;
             padding:12px 24px;
