--- a/index.html
+++ b/index.html
@@ -278,6 +278,8 @@ footer {
 <!-- STUDENT LOGIN BUTTON -->
 <div style="text-align:center; margin:18px 0;">
   <a href="https://bjjtacoma.kicksite.net/users/sign_in"
+     target="_blank"
+     rel="noopener noreferrer"
      class="pulse-login"
      style="background:#3B82F6;
             padding:12px 24px;
@@ -521,4 +523,5 @@ function toggleAcc(btn){
 
 </body>
 </html>
+
 
