--- a/index.html
+++ b/index.html
@@ -284,6 +284,11 @@ footer {
   <img src="header.webp" class="banner-img">
 </div>
 
+<!-- TAGLINE -->
+<div style="text-align:center; margin:18px 0 0 0; font-size:1.1rem; font-weight:700; color:#ffffff;">
+  BJJ COACH International Association in Tacoma, WA
+</div>
+   
 <!-- NAVIGATION -->
 <div class="navbar">
   <div class="nav-inner">
@@ -548,3 +553,4 @@ function toggleAcc(btn){
 
 </body>
 </html>
+
