--- a/testindex.html
+++ b/testindex.html
@@ -286,7 +286,7 @@ footer {
 
 <!-- TAGLINE -->
 <div style="text-align:center; margin:18px 0 0 0; font-size:1.1rem; font-weight:700; color:#ffffff;">
-  BJJ COACH International Association in Tacoma, WA
+  BJJ COACH International Association | Tacoma, WA
 </div>
    
 <!-- NAVIGATION -->
