Add social media icons to the footer
Added social media icons for Instagram and Facebook.

--- a/testindex.html
+++ b/testindex.html
@@ -547,9 +547,24 @@ function toggleAcc(btn){
 <div class="footer-img-row"><img src="military_discounts.gif"></div>
 <div class="footer-img-row"><img src="no_bullies.jpg"></div>
 <div class="footer-img-row"><img src="sanitized_facility.jpg"></div>
+<!-- SOCIAL MEDIA ICONS -->
+<div style="text-align:center; margin:25px 0;">
+  
+  <!-- Instagram -->
+  <a href="https://instagram.com/gritcitybjj" target="_blank" rel="noopener noreferrer">
+    <img src="instagram.png" style="width:38px; margin:0 12px;">
+  </a>
 
+  <!-- Facebook -->
+  <a href="https://facebook.com/gritcitybjj" target="_blank" rel="noopener noreferrer">
+    <img src="facebook.png" style="width:38px; margin:0 12px;">
+  </a>
+
+</div>
 <p>&copy; 2025 GRIT CITY BJJ — All Rights Reserved</p>
 </footer>
 
 </body>
 </html>
+
+
