--- a/testindex.html
+++ b/testindex.html
@@ -551,14 +551,20 @@ function toggleAcc(btn){
 <div style="text-align:center; margin:25px 0;">
   
   <!-- Instagram -->
-  <a href="https://instagram.com/gritcitybjj" target="_blank" rel="noopener noreferrer">
-    <img src="instagram.png" style="width:38px; margin:0 12px;">
-  </a>
+<a href="https://instagram.com/gritcitybjj"
+   target="_blank"
+   rel="noopener noreferrer"
+   style="text-decoration:none; color:transparent;">
+   <img src="instagram.png" style="width:38px; margin:0 12px;">
+</a>
 
   <!-- Facebook -->
-  <a href="https://facebook.com/gritcitybjj" target="_blank" rel="noopener noreferrer">
-    <img src="facebook.png" style="width:38px; margin:0 12px;">
-  </a>
+<a href="https://facebook.com/gritcitybjj"
+   target="_blank"
+   rel="noopener noreferrer"
+   style="text-decoration:none; color:transparent;">
+   <img src="facebook.png" style="width:38px; margin:0 12px;">
+</a>
 
 </div>
 <p>&copy; 2025 GRIT CITY BJJ — All Rights Reserved</p>
