Add new image and reverse order of existing images

--- a/testindex.html
+++ b/testindex.html
@@ -373,19 +373,25 @@ footer {
 <section>
 <h2>Best of Tacoma Awards</h2>
 <div class="gallery-scroll">
-  <img src="best_of_tacoma_2012.jpg" onclick="pop(this)">
-  <img src="best_of_tacoma_2013.jpg" onclick="pop(this)">
-  <img src="best_of_tacoma_2014.jpg" onclick="pop(this)">
-  <img src="best_of_tacoma_2015.jpg" onclick="pop(this)">
-  <img src="best_of_tacoma_2016.jpg" onclick="pop(this)">
-  <img src="best_of_tacoma_2017.jpg" onclick="pop(this)">
-  <img src="best_of_tacoma_2018.jpg" onclick="pop(this)">
-  <img src="best_of_tacoma_2019.jpg" onclick="pop(this)">
-  <img src="best_of_tacoma_2020.jpg" onclick="pop(this)">
-  <img src="best_of_tacoma_2021.jpg" onclick="pop(this)">
-  <img src="best_of_tacoma_2022.jpg" onclick="pop(this)">
-  <img src="best_of_tacoma_2023.jpg" onclick="pop(this)">
+
+  <!-- NEW FIRST ENTRY -->
+  <img src="best_of_tacoma_2025.jpg" onclick="pop(this)">
+
+  <!-- REVERSED ORDER -->
   <img src="best_of_tacoma_2024.jpg" onclick="pop(this)">
+  <img src="best_of_tacoma_2023.jpg" onclick="pop(this)">
+  <img src="best_of_tacoma_2022.jpg" onclick="pop(this)">
+  <img src="best_of_tacoma_2021.jpg" onclick="pop(this)">
+  <img src="best_of_tacoma_2020.jpg" onclick="pop(this)">
+  <img src="best_of_tacoma_2019.jpg" onclick="pop(this)">
+  <img src="best_of_tacoma_2018.jpg" onclick="pop(this)">
+  <img src="best_of_tacoma_2017.jpg" onclick="pop(this)">
+  <img src="best_of_tacoma_2016.jpg" onclick="pop(this)">
+  <img src="best_of_tacoma_2015.jpg" onclick="pop(this)">
+  <img src="best_of_tacoma_2014.jpg" onclick="pop(this)">
+  <img src="best_of_tacoma_2013.jpg" onclick="pop(this)">
+  <img src="best_of_tacoma_2012.jpg" onclick="pop(this)">
+
 </div>
 </section>
 
