--- a/testindex.html
+++ b/testindex.html
@@ -518,13 +518,70 @@ Call <a href="tel:2532546538" style="color:#3B82F6;">253-254-6538</a>.
 <section id="try">
 <h2>Try a Free Class</h2>
 
-<form action="mailto:gritcitybjj@gmail.com" method="POST" enctype="text/plain">
+<form id="freeClassForm" action="https://formsubmit.co/gritcitybjj@gmail.com" method="POST">
+
+  <!-- Disable CAPTCHA -->
+  <input type="hidden" name="_captcha" value="false">
+
+  <!-- No redirect after submit -->
+  <input type="hidden" name="_next" value="">
+
   <input name="Name" placeholder="Name (required)" required>
   <input name="Email" placeholder="Email (required)" required>
   <input name="Phone" placeholder="Phone (optional)">
   <textarea name="Message" rows="4" placeholder="Your Message (optional)"></textarea>
+
   <button>Submit</button>
 </form>
+
+<!-- POPUP -->
+<div id="thankYouPopup"
+     style="display:none; position:fixed; inset:0; background:rgba(0,0,0,0.85);
+            z-index:999999; justify-content:center; align-items:center;">
+
+  <div style="background:#111827; padding:30px; border-radius:14px; text-align:center;
+              border:2px solid #3B82F6; max-width:320px;">
+
+    <h3 style="margin-top:0; color:#fff;">Thank You</h3>
+
+    <p style="color:#E5E7EB;">
+      Please check your email for a message from<br>
+      <strong>gritcitybjj@gmail.com</strong><br>
+      We will be in touch soon.
+    </p>
+
+    <button onclick="closePopup()"
+            style="margin-top:15px; padding:10px 20px; background:#3B82F6;
+                   color:white; border:none; border-radius:8px; font-weight:800;">
+      OK
+    </button>
+  </div>
+</div>
+
+<script>
+document.getElementById("freeClassForm").addEventListener("submit", function(e) {
+  e.preventDefault();
+
+  const form = e.target;
+  const formData = new FormData(form);
+
+  fetch(form.action, {
+    method: "POST",
+    body: formData
+  })
+  .then(() => {
+    document.getElementById("thankYouPopup").style.display = "flex";
+    form.reset();
+  })
+  .catch(() => {
+    alert("Error sending message. Please try again.");
+  });
+});
+
+function closePopup() {
+  document.getElementById("thankYouPopup").style.display = "none";
+}
+</script>
 
 <!-- INTRO IMAGE -->
 <img src="introductory_class.jpg" style="width:100%;margin-top:20px;border-radius:14px;display:block;">
@@ -578,5 +635,3 @@ function toggleAcc(btn){
 
 </body>
 </html>
-
-
